--- a/Loop.ipynb
+++ b/Loop.ipynb
@@ -448,6 +448,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "id": "df5f0ec1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * \n",
+      "* * * * \n",
+      "* * * * \n",
+      "* * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "row = 1\n",
+    "while row <= 4:\n",
+    "    col = 1\n",
+    "    while col <= 4:\n",
+    "      print(\"*\", end =\" \")\n",
+    "      col = col + 1\n",
+    "    print()\n",
+    "    row = row + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "887b3311",
    "metadata": {},
